--- a/back/package.json
+++ b/back/package.json
@@ -7,12 +7,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "email-validator": "^2.0.4",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.0",
+    "maskdata": "^1.2.0",
     "mongoose": "^6.9.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "password-validator": "^5.3.0",
     "socket.io": "^4.6.0"
   },
   "devDependencies": {
